--- a/pages/enviar-video.html
+++ b/pages/enviar-video.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,50 +12,34 @@
     <title>AluraPlay</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
-
 <body>
-
     <!-- encabezado -->
     <header>
-
         <nav class="encabezado">
             <a class="logo" href="../index.html"></a>
-
             <div class="cabecalho__icones">
                 <a href="./enviar-video.html" class="cabecalho__videos"></a>
             </div>
         </nav>
-
     </header>
 
     <main class="container">
-
-        <form class="container__formulario">
-            <h2 class="formulario__titulo">¡Envía un vídeo!</h3>
-                <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="url">Link del video</label>
-                    <input name="url" class="campo__escrita" required
-                        placeholder="Por ejemplo: https://www.youtube.com/embed/QjOWz9avkg8" id='url' />
-                </div>
-
-
-                <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="titulo">Título del vídeo</label>
-                    <input name="titulo" class="campo__escrita" required placeholder="En este campo, pon el nombre del vídeo"
-                        id='titulo' />
-                </div>
-
-                <div class="formulario__campo">
-                    <label class="campo__etiqueta" for="imagem">Imagen de perfil</label>
-                    <input name="imagem" class="campo__escrita" required placeholder="Inserta la URL de la imagen"
-                        id='imagem' />
-                </div>
-
-                <input class="formulario__boton" type="submit" />
+        <form class="container__formulario" data-form>
+            <div class="formulario__campo">
+                <label class="campo__etiqueta" for="url">Link del video</label>
+                <input name="url" class="campo__escrita" required placeholder="Por ejemplo: https://www.youtube.com/embed/QjOWz9avkg8" id='url' data-url/>
+            </div>
+            <div class="formulario__campo">
+                <label class="campo__etiqueta" for="titulo">Título del vídeo</label>
+                <input name="titulo" class="campo__escrita" required placeholder="En este campo, pon el nombre del vídeo" id='titulo' data-title/>
+            </div>
+            <div class="formulario__campo">
+                <label class="campo__etiqueta" for="imagem">Imagen de perfil</label>
+                <input name="imagem" class="campo__escrita" required placeholder="Inserta la URL de la imagen" id='imagem' data-img/>
+            </div>
+            <input class="formulario__boton" type="submit" />
         </form>
-
     </main>
-
+    <script src="../js/crearVideo.js" type="module"></script>
 </body>
-
 </html>
