--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="encabezado">
             <a class="logo" href="./index.html"></a>
             <div class="encabezado__buscar">
-                <input type="search" placeholder="Buscar" id="buscar" class="buscar__input">
-                <button class="buscar__boton"></button>
+                <input type="search" placeholder="Buscar" id="buscar" class="buscar__input" data-busqueda>
+                <button class="buscar__boton" data-boton-busqueda></button>
             </div>
             <div class="encabezado__iconos">
                 <a href="./pages/enviar-video.html" class="encabezado__videos"></a>
@@ -39,5 +39,6 @@
         </li>-->
     </ul>
     <script src="./js/mostrarVideos.js" type="module"></script>
+    <script src="./js/filtrarVideo.js" type="module"></script>
 </body>
 </html>
